--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sjcl",
+  "name": "sjcl-with-all",
   "version": "1.0.8",
   "description": "Stanford Javascript Crypto Library",
   "main": "sjcl.js",
